# COMP37111

./: .gitignore  CMakeLists.txt  README.md  analysisResult.csv  matlabTest.m
cmake/: FindGLEW.cmake  FindOpenCl.cmake
particleCountPerFrameCalculator/: RandomMain.cpp  particleAtFrameCount.csv
src/: Analyser.cpp  Analyser.h  Analysiser.cpp  Analysiser.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp  openGLAbstractions.cpp  openGLAbstractions.h
src/Kernel/: simulate_particle.cl
src/common/: Particle.cpp  Particle.h  controls.cpp  controls.hpp  file_loader.cpp  file_loader.h  shader.cpp  texture.cpp
src/graphing/: FPSGraph.py  FPSGrapher.py  analysisResult-1-CL.csv  analysisResult-1-Dsk.csv  analysisResult-1-Mac.csv  analysisResult-100-CL.csv  analysisResult-100-Dsk.csv  analysisResult-100-Mac.csv  analysisResult-1000-CL.csv  analysisResult-1000-Dsk.csv  analysisResult-1000-Mac.csv  analysisResult-150-CL.csv  analysisResult-150-Dsk.csv  analysisResult-150-Mac.csv  analysisResult-200-CL.csv  analysisResult-200-Dsk.csv  analysisResult-200-Mac.csv  analysisResult-2000-CL.csv  analysisResult-2000-Dsk.csv  analysisResult-2000-Mac.csv  analysisResult-250-CL.csv  analysisResult-250-Dsk.csv  analysisResult-250-Mac.csv  analysisResult-300-CL.csv  analysisResult-300-Dsk.csv  analysisResult-300-Mac.csv  analysisResult-350-CL.csv  analysisResult-350-Dsk.csv  analysisResult-350-Mac.csv  analysisResult-400-CL.csv  analysisResult-400-Dsk.csv  analysisResult-400-Mac.csv  analysisResult-450-CL.csv  analysisResult-450-Dsk.csv  analysisResult-50-CL.csv  analysisResult-50-Dsk.csv  analysisResult-50-Mac.csv  analysisResult-500-CL.csv  analysisResult-500-Dsk.csv  analysisResult-500-Mac.csv  (+36 more)
src/shaders/: Particle.vertexshader  fragment_shader.glsl  vertex_shader.glsl
